log
Thu May 12 11:13:09 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c730e93
Thu May 12 11:18:40 HSP 2022: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
97f0b6a
Thu May 12 11:22:23 HSP 2022: 
 sudoku.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
2cfdd16
Thu May 12 11:29:00 HSP 2022: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  0|5
total_score: 0/70
8e0c641
Thu May 12 11:30:44 HSP 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
f405bea
Thu May 12 11:31:25 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
22c7bfc
Thu May 12 11:32:27 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
98bb6d0
Thu May 12 11:37:36 HSP 2022: 
 sudoku.c | 37 ++++++++++---------------------------
 1 file changed, 10 insertions(+), 27 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:54:29: error: expected ')' before ';' token
       if (n->sudo[i][j] != 0;)
                             ^
sudoku.c:64:10: error: unused variable 'vectorNum' [-Werror=unused-variable]
     int *vectorNum = (int*)calloc(10, sizeof(int));
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
545a6fa
Thu May 12 11:38:12 HSP 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:54:29: error: expected ')' before ';' token
       if (n->sudo[i][j] != 0;)
                             ^
sudoku.c:56:9: error: expected expression before '[' token
         [vectorNumn->sudo[i][j]]++;
         ^
sudoku.c:56:10: error: 'vectorNumn' undeclared (first use in this function)
         [vectorNumn->sudo[i][j]]++;
          ^~~~~~~~~~
sudoku.c:56:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
105ba1e
Thu May 12 11:38:37 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:54:29: error: expected ')' before ';' token
       if (n->sudo[i][j] != 0;)
                             ^
Compilation failed
6e382e4
Thu May 12 11:39:05 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
be85d3f
Thu May 12 11:41:24 HSP 2022: 
 sudoku.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
27474c4
Thu May 12 11:41:57 HSP 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
c5e52a6
Thu May 12 11:48:22 HSP 2022: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
18fbd44
Thu May 12 11:56:59 HSP 2022: 
 sudoku.c | 25 +++++++++++++++++++------
 1 file changed, 19 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
af0f8ed
Thu May 12 12:01:09 HSP 2022: 
 sudoku.c | 21 ---------------------
 1 file changed, 21 deletions(-)
 tests:  5|3
total_score: 35/70
6e766f0
Thu May 12 12:04:08 HSP 2022: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|3
total_score: 35/70
3507b32
Thu May 12 12:07:40 HSP 2022: 
 sudoku.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
485415a
Thu May 12 12:08:10 HSP 2022: 
 sudoku.c | 17 ++++-------------
 1 file changed, 4 insertions(+), 13 deletions(-)
 tests:  6|2
total_score: 45/70
a6bb20f
Thu May 12 12:12:40 HSP 2022: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
4c58285
Thu May 12 20:31:28 HSP 2022: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  8|1
total_score: 60/70
26ecf08
Thu May 12 20:31:59 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
b2ce972
Thu May 12 20:33:32 HSP 2022: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  8|1
total_score: 60/70
b2ffdf2
Thu May 12 20:34:14 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
d218e5c
Thu May 12 20:34:58 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
57e5a23
Thu May 12 20:35:44 HSP 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|1
total_score: 60/70
57aaf1b
